--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
   line-height: 1.5;
 }
 
@@ -21,5 +21,8 @@ ol {
 
 img {
   display: block;
-  max-width: 100%;
+}
+
+button{
+  border: none;
 }
